# dynamo-am

./: .gitignore  Cargo.toml  Makefile  README.md  deny.toml  todos.md
.github/workflows/: ci.yml  copyright-checks.yml  release.yml
docs/: active_message.md  perf_optimizations.md  response_anchor_design.md
examples/: Cargo.toml  run_examples.sh
examples/src/: lib.rs
src/: builder.rs  client.rs  cohort.rs  dispatcher.rs  handler_impls.rs  lib.rs  message_router.rs  transport.rs
src/api/: builder.rs  client.rs  control.rs  handler.rs  message.rs  mod.rs  response_anchor.rs  status.rs
src/protocol/: message.rs  mod.rs  response.rs  responses.rs
src/protocol_v2/: control.rs  message.rs  mod.rs
src/protocols/: mod.rs  response.rs  response_anchor.rs
src/protocols/v2/: mod.rs
src/runtime/: anchor_manager.rs  cohort.rs  dispatcher.rs  handler_impls.rs  manager.rs  manager_builder.rs  message_router.rs  mod.rs  network_client.rs  response_manager.rs  system_handlers.rs
src/transport/: boxed.rs  mod.rs  streaming.rs
src/transport/zmq/: discovery.rs  manager.rs  thin_transport.rs  transport.rs
src/zmq/: manager.rs  mod.rs  streaming_transport.rs  thin_transport.rs  transport.rs
tests/: debug_anchor.rs  handler_discovery.rs  response_anchor.rs  response_anchor_golden_path.rs  response_anchor_lifecycle.rs  response_handling.rs
