# SPDX-FileCopyrightText: Copyright (c) 2024-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "active_message_example"
version = "0.0.0"
edition = "2024"

[dependencies]
dynamo-am = { path = ".." }

anyhow = "1.0"
async-trait = "0.1"
bytes = "1.0"
futures-util = "0.3"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.0"
tmq = "0.5"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
